<resources>
    <string name="app_name">Incidents Reporting App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_incidents">My Incidents</string>
    <string name="all_incidents">View Incidents</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="or_create_an_account">Or create an account.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="or_login_instead">Or login instead.</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque velit et erat volutpat volutpat. Sed a erat bibendum, pellentesque nisl ut, rutrum tellus. Donec...</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="reset_password">Reset Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">My Profile</string>
</resources>